# FlightTracker

./: .eleventy.js  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE.md  README.md  SECURITY.md  flight-tracker.py  index.html  install-pi5.sh  install.sh  package-lock.json  package.json  pyproject.toml  requirements-pi5.txt  requirements.txt  settings-interface-demo.py  version.py  weather_sprites.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: discusion.agent.md  implement.agent.md
.github/workflows/: deploy.yml  lint.yml
assets/: FlightTracker.service  airports.json  airports.py  icao_to_iata.json  logo.xcf  splash.xcf
css/: style.css
display/: __init__.py  bdf_font.py  panel_factory.py  rgbpanel.py  rgbpanel_piomatter.py  rgbpanel_rgbmatrix.py  rgbpanel_simulator.py  scroller.py
docs/: index.html
fonts/: 4x6.bdf  5x8-custom.bdf  5x8.bdf  6x12.bdf
images/captures/: date-time.webm  full names and plane type.webm  full-names-and-telemetry.webm  pass-preview.webm  satellite-pass.webm  short names and plane type.webm  short-names-and-telemetry.webm  themes.webm  web-config-ui.webm
rgbmatrix/: __init__.py  graphics.py
scenes/: clock.py  date.py  day.py  flightdetails.py  journey.py  loadingled.py  loadingnull.py  loadingpulse.py  planedetails.py  weather.py
scenes/flight/: flight_scene.py  flightdetails.py  journey.py  planedetails.py
scenes/idle/: clock.py  date.py  day.py  idle_scene.py  weather.py
scenes/satellite/: azel_plot.py  passes.py  satellite_scene.py
setup/: colours.py  configuration.py  fonts.py  frames.py  logging.py  themes.py
src/: build.md  index.md  install.md
src/_data/: displayModes.json  features.json  hardware.json  nav.json  site.json  themes.json
src/_includes/: display-modes.njk  feature-grid.njk  footer.njk  hardware-grid.njk  info-panel.njk  nav.njk  status-bar.njk  theme-swatches.njk
src/_layouts/: base.njk
tests/: __init__.py  conftest.py  test_animations.py  test_cli.py  test_codes.py  test_configuration.py  test_flight_scene.py  test_forecast.py  test_forecast_sprite.py  test_overhead.py  test_route_lookup.py  test_routes_cache.py  test_satellite.py  test_scene_manager.py  test_scroller.py  test_themes.py
utilities/: animator.py  cli.py  flight.py  overhead.py  overhead_fr24.py  overhead_osn.py  overhead_tar1090.py  overhead_utilities.py  planet_tracker.py  route_lookup.py  routes_cache.py  scene_manager.py  sun_times.py  tle_manager.py  updater.py
web/: app.py
web/static/: logo.xcf  settings.js  style.css
web/templates/: clear_cache.html  (+5 more)
(+28 files in other folders)
